添加PLAYER_QUERY协议 修正 写入Integer的位数

--- a/pp.html
+++ b/pp.html
@@ -14,6 +14,7 @@
   <header>
     <button id="cmd_login" type="button">Login</button>
     <button id="cmd_logout" type="button">Logout</button>
+    <button id="cmd_player_query" type="button">Player Query</button>
     <button id="cmd_query" type="button">Query Game List</button>
     <hr />
     <ul id="listUserInfo">
