修正了对登陆后直接获取用户信息的支持

--- a/pp.html
+++ b/pp.html
@@ -14,13 +14,12 @@
   <header>
     <button id="cmd_login" type="button">Login</button>
     <button id="cmd_logout" type="button">Logout</button>
-    <button id="cmd_player_query" type="button">Player Query</button>
     <button id="cmd_query" type="button">Query Game List</button>
     <hr />
     <ul id="listUserInfo">
-      <li>Nick: <label id='lb_Nick' /></li>
-      <li>Balance: <label id='lb_Balance' /></li>
-      <li>Location: <label id='lb_Location' /></li>
+      <li>Nick: <label id='lab_nick' /></li>
+      <li>In-Play: <label id='lab_inplay' /></li>
+      <li>Location: <label id='lab_location' /></li>
     </ul>
     <hr />
   </header>
