增加对GAME_QUERY协议的支持

--- a/pp.html
+++ b/pp.html
@@ -14,7 +14,7 @@
   <header>
     <button id="cmd_login" type="button">Login</button>
     <button id="cmd_logout" type="button">Logout</button>
-    <button id="cmd_query" type="button">Query Game List</button>
+    <button id="cmd_game_query" type="button">Query Game List</button>
     <hr />
     <ul id="listUserInfo">
       <li>Nick: <label id='lab_nick' /></li>
