添加对PING PONG协议的支持 添加对timestamp类型的支持

--- a/pp.html
+++ b/pp.html
@@ -15,11 +15,13 @@
     <button id="cmd_login" type="button">Login</button>
     <button id="cmd_logout" type="button">Logout</button>
     <button id="cmd_game_query" type="button">Query Game List</button>
+    <button id="cmd_ping" type="button">Ping CMD</button>
     <hr />
     <ul id="listUserInfo">
       <li>Nick: <label id='lab_nick' /></li>
       <li>In-Play: <label id='lab_inplay' /></li>
       <li>Location: <label id='lab_location' /></li>
+      <li>Ping: <label id='lab_ping' /></li>
     </ul>
     <hr />
   </header>
