添加了对Nick的支持 添加了解析中文（base64）的支持
lease enter the commit message for your changes. Lines starting

--- a/pp.html
+++ b/pp.html
@@ -18,7 +18,7 @@
     <button id="cmd_ping" type="button">Ping CMD</button>
     <hr />
     <ul id="listUserInfo">
-      <li>Usr: <label id='lab_usr' /></li>
+      <li>Nick: <label id='lab_nick' /></li>
       <li>In-Play: <label id='lab_inplay' /></li>
       <li>Location: <label id='lab_location' /></li>
       <li>Ping: <label id='lab_ping' /></li>
