添加了对头像的支持, 请求PLAYER_INFO时下载用户头像的base64编码

--- a/pp.html
+++ b/pp.html
@@ -21,6 +21,7 @@
       <li>Nick: <label id='lab_nick' /></li>
       <li>In-Play: <label id='lab_inplay' /></li>
       <li>Location: <label id='lab_location' /></li>
+      <li>Photo: <img id='img_photo'></img></li>
       <li>Ping: <label id='lab_ping' /></li>
     </ul>
     <hr />
