--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
   <script type="text/javascript" src="../js/base64/jquery.base64.js"></script>
   <script type="text/javascript" src="../js/openpoker/jquery.pp.js"></script>
-  <script type="text/javascript" src="index.js"></script>
+  <script charset="gb2312" type="text/javascript" src="index.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit example</h1>
