--- a/pp.html
+++ b/pp.html
@@ -8,6 +8,7 @@
   <script src="js/jtemplates/jquery.jtemplates.js" type="text/javascript"></script>  
   <script src="js/base64/jquery.base64.js" type="text/javascript"></script>  
   <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
+  <script src="js/openpoker/jquery.tools.js" type="text/javascript"></script>  
   <script src="js/openpoker/jquery.ws.js" type="text/javascript"></script>  
   <script src="js/pp.js" type="text/javascript"></script>  
 </head>
@@ -20,6 +21,7 @@
       <th>State</th>
       <th>PID</th>
       <th>Inplay</th>
+      <th>Commands</th>
     </tr>
     {#foreach $T.datas as obj}
     <tr>
@@ -27,6 +29,10 @@
       <td>{#if $T.obj.state == 0} empty {#else} {$T.obj.state} {#/if}</td>
       <td>{$T.obj.pid}</td>
       <td>{$T.obj.inplay}</td>
+      <td>
+        <button class="cmd_watch" gid="{$T.gid}">Watch</button> 
+        {#if $T.obj.state == 0} | <button class="cmd_join" gid="{$T.gid}" seat="{$T.obj.seat}">Join</button> {#else} | <button class="cmd_leave" gid="{$T.gid}">Leave</button> {#/if}
+      </td>
     </tr>
     {#/for}
     </table>
@@ -52,8 +58,7 @@
         <td>{$T.record.waiting}</td>
         <td>{$T.record.required}</td>
         <td>{#if $T.record.limit_type == 1} No Limit {#else} {$T.record.limit_type} {#/if} ${$T.record.height} - ${$T.record.low}</td>
-        <td><button class="cmd_join" gid="{$T.record.id}">Join</button> | 
-            <button class="cmd_seats_state" gid="{$T.record.id}">Seats State</button>
+        <td>           <button class="cmd_seats_state" gid="{$T.record.id}">Seats State</button>
         </td>
       </tr>
       {#/for}
