合并jquery到plugins目录

--- a/pp.html
+++ b/pp.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>PROTOCOL TESTING</title>
   <script src="js/jquery.js" type="text/javascript"></script>  
-  <script src="js/blockui/jquery.blockUI.js" type="text/javascript"></script>  
-  <script src="js/jtemplates/jquery.jtemplates.js" type="text/javascript"></script>  
-  <script src="js/base64/jquery.base64.js" type="text/javascript"></script>  
+  <script src="js/plugins/jquery.blockUI.js" type="text/javascript"></script>  
+  <script src="js/plugins/jquery.jtemplates.js" type="text/javascript"></script>  
+  <script src="js/plugins/jquery.base64.js" type="text/javascript"></script>  
   <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
   <script src="js/openpoker/jquery.tools.js" type="text/javascript"></script>  
   <script src="js/openpoker/jquery.ws.js" type="text/javascript"></script>  
