--- a/game.html
+++ b/game.html
@@ -4,9 +4,9 @@
   	<meta charset="utf-8" >
     <title>创世纪 - 德州扑克</title>  
     <script src="js/jquery.js" type="text/javascript"></script>  
-    <script src="js/base64/jquery.base64.js" type="text/javascript"></script>  
-    <script src="js/blockui/jquery.blockUI.js" type="text/javascript"></script>  
-    <script src="js/jtemplates/jquery.jtemplates.js" type="text/javascript"></script>  
+    <script src="js/plugins/jquery.base64.js" type="text/javascript"></script>  
+    <script src="js/plugins/jquery.blockUI.js" type="text/javascript"></script>  
+    <script src="js/plugins/jquery.jtemplates.js" type="text/javascript"></script>  
     <script src="js/plugins/jquery.timers.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.tools.js" type="text/javascript"></script>  
