--- a/game.html
+++ b/game.html
@@ -8,6 +8,8 @@
     <script src="js/plugins/jquery.blockUI.js" type="text/javascript"></script>  
     <script src="js/plugins/jquery.jtemplates.js" type="text/javascript"></script>  
     <script src="js/plugins/jquery.timers.js" type="text/javascript"></script>  
+    <script src="js/openpoker/jquery.game.js" type="text/javascript"></script>  
+    <script src="js/openpoker/jquery.seat.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.tools.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.ws.js" type="text/javascript"></script>  
@@ -24,7 +26,62 @@
   	</form>
   	<div id="game_panel" style='display: none;'>
   	  <img id='img_photo'></img> | <label id='lab_nick'></label> | <label id='lab_inplay'></label> | <label id='lab_location'></label><br />
-  	  
+  	  <div id="seats_table"></div><br />
+  	  <div id="games_table"></div>
   	</div>
+  	
+  <!--Game Info Table Template-->
+  <textarea id="seats_temp" style="display:none">
+    <hr />
+    <table><tr>
+      <th>GID</th>
+      <th>SN</th>
+      <th>State</th>
+      <th>PID</th>
+      <th>Inplay</th>
+      <th>Commands</th>
+    </tr>
+    {#foreach $T.datas as obj}
+    <tr>
+      <td>{$T.obj.gid}</td>
+      <td>{$T.obj.seat}</td>
+      <td>{#if $T.obj.state == 0} empty {#else} {$T.obj.state} {#/if}</td>
+      <td>{$T.obj.pid}</td>
+      <td>{$T.obj.inplay}</td>
+      <td>
+        {#if $T.obj.state == 0} <button class="cmd_join" gid="{$T.gid}" seat="{$T.obj.seat}">Join</button> {#else} <button class="cmd_leave" gid="{$T.gid}">Leave</button> {#/if}
+      </td>
+    </tr>
+    {#/for}
+    </table>
+  </textarea>
+  <textarea id="games_temp" style="display:none">
+    <table>
+      <tr>
+        <th>GID</th>
+        <th>Game Type</th>
+        <th>Seats</th>
+        <th>Joined</th>
+        <th>Waiting</th>
+        <th>Required</th>
+        <th>Limit</th>
+        <th>Commands</th>
+      </tr>
+      {#foreach $T.datas as record}
+      <tr>
+        <td>{$T.record.id}</td>
+        <td>{#if $T.record.game_type == 0} Texas hold 'em {#else} {$T.record.game_type} {#/if} </td>
+        <td>{$T.record.seats}</td>
+        <td>{$T.record.joined}</td>
+        <td>{$T.record.waiting}</td>
+        <td>{$T.record.required}</td>
+        <td>{#if $T.record.limit_type == 1} No Limit {#else} {$T.record.limit_type} {#/if} ${$T.record.height} - ${$T.record.low}</td>
+        <td>           <button class="cmd_check" gid="{$T.record.id}">Check</button>
+        </td>
+      </tr>
+      {#/for}
+    </table>
+  </textarea>
+  <!--Tempalte End-->
   </body>  
 </html>
