--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<html>  
-  <head>  
-    <title>Texas Poker</title>  
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" >
+    <title>创世纪 - 德州扑克</title>  
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/jquery.plugins.js" type="text/javascript"></script>  
+    <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
+    <script src="js/openpoker/jquery.ws.js" type="text/javascript"></script>  
+    <script src="js/index.js" type="text/javascript"></script>  
   </head>  
   <body>
-  	<a href="pp.html?usr=1000">Sample Usr 1000</a><br />
-  	<a href="pp.html?usr=1001">Sample Usr 1001</a><br />
-  	<a href="pp.html?usr=1002">Sample Usr 1002</a><br />
-  </body>  
+    <div id="center">
+      <div id="login">
+        <form id="login" method="post">
+          <label>帐户<input id="txt_usr" 
+            placeholder="请输入您的帐户" required autofocus ></label><br />
+          <label>密码<input id="txt_pwd" type="password" 
+            placeholder="请输入您的密码" required ></label><br />
+          <button type="submit" id="cmd_login">登录</button>
+          <input type="checkbox" id="ckb_save" checked />保存登陆信息
+          <label id="lab_error" style="display: none; color: red;">用户名密码错误</label>
+        </form>
+      </div>
+      <div id="hall" style="display:none;">
+      </div>
+      <div id="game" style="display:none;">
+      </div>
+    </div>
+  </body>
 </html>
