构建基本的页面结构

--- a/hall.html
+++ b/hall.html
@@ -1,4 +1,6 @@
-  <h3>Game Hell</h3>
+<header>
+  <h3>游戏大厅</h3>
+</header>
   <div id='seats_table'></div>
   <hr />
   <div id='games_table'></div>
