对界面进行了基本的美化

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     <nav id=toolbar>
       <div id=title></div>
       <img id=logo src=logo.png />
+      <img id=photo />
+      <label id=nick class=msg ></label>
+      <label id=money class=msg ></label>
     </nav>
     <article id=content>
-      <article id="login">
+      <article id=login>
       </article>
-      <article id="hall" style="display:none;">
+      <article id=hall style="display:none;">
       </article>
-      <article id="game" style="display:none;">
+      <article id=game style="display:none;">
       </article>
     </div>
   </body>
