--- a/login.html
+++ b/login.html
@@ -1,13 +1,9 @@
-<header>
-  <h3>登陆</h3>
-</header>
-<form id="login" method="post">
-  <label>帐户<input id="txt_usr" 
-    placeholder="请输入您的帐户" required autofocus ></label><br />
-  <label>密码<input id="txt_pwd" type="password" 
-    placeholder="请输入您的密码" required ></label><br />
-  <button type="submit" id="cmd_login">登录</button>
-  <input type="checkbox" id="ckb_save" checked />保存登陆信息
-  <label id="lab_error" style="display: none; color: red;">用户名密码错误</label>
+<form id=singin method=post>
+  <label>帐户<input id=txt_usr
+    placeholder=请输入您的帐户 required autofocus ></label><br />
+  <label>密码<input id=txt_pwd type=password 
+    placeholder=请输入您的密码 required ></label><br />
+  <button type=submit id=cmd_singin>登录</button>
+  <input type=checkbox id=ckb_save checked />保存登陆信息
+  <label id=lab_error style="display: none; color: red;">用户名密码错误</label>
 </form>
-
