--- a/login.html
+++ b/login.html
@@ -1,9 +1,11 @@
-<form id=singin method=post>
-  <label>帐户<input id=txt_usr
+<form id=singin method=post style="font-size: 2em; height: 200px; margin-top: 60px;">
+  <label>帐户<input id=txt_usr style="margin-left: 12px; width: 200px; height: 26px; font-size: 24px;"
     placeholder=请输入您的帐户 required autofocus ></label><br />
-  <label>密码<input id=txt_pwd type=password 
+  <label>密码<input id=txt_pwd type=password style="margin-left: 12px; width: 200px; height: 26px; font-size: 24px;"
     placeholder=请输入您的密码 required ></label><br />
-  <button type=submit id=cmd_singin>登录</button>
-  <input type=checkbox id=ckb_save checked />保存登陆信息
-  <label id=lab_error style="display: none; color: red;">用户名密码错误</label>
+  <div style="padding-top: 24px; -webkit-box-align: left;">
+    <button type=submit id=cmd_singin style="font-size: 28px; margin-left: -70px;">登录</button>
+    <input type=checkbox id=ckb_save checked /><label style="font-size: 18px;">保存账户信息</label><br />
+    <label id=lab_err_singin style="color: red; display: none;">账户或密码有误</label>
+  </div>
 </form>
