--- a/hall.html
+++ b/hall.html
@@ -1,33 +1,7 @@
-<div id='seats_table'></div>
-<div id='games_table'></div>
-<!--Game Info Table Template-->
-<textarea id="seats_temp" style="display:none">
-  <table><tr>
-      <th>GID</th>
-      <th>SN</th>
-      <th>State</th>
-      <th>PID</th>
-      <th>Inplay</th>
-      <th>Commands</th>
-    </tr>
-    {#foreach $T.datas as obj}
+<div id=seats></div>
+<table class=games>
+  <thead>
     <tr>
-      <td>{$T.obj.gid}</td>
-      <td>{$T.obj.seat}</td>
-      <td>{#if $T.obj.state == 0} empty {#else} {$T.obj.state} {#/if}</td>
-      <td>{$T.obj.pid}</td>
-      <td>{$T.obj.inplay}</td>
-      <td>
-        <button class="cmd_join" gid="{$T.gid}" seat="{$T.obj.seat}">Join</button> | <button class="cmd_leave" gid="{$T.gid}">Leave</button>
-      </td>
-    </tr>
-    {#/for}
-  </table>
-</textarea>
-<textarea id="games_temp" style="display:none">
-  <table id="gtable">
-    <thead>
-    <tr class=header>
       <th>ID</th>
       <th>房间</th>
       <th>大/小盲注</th>
@@ -35,17 +9,36 @@
       <th>旁观</th>
     </tr>
   </thead>
-  <tbody>
-    {#foreach $T.datas as record}
-    <tr gid="{$T.record.id}" seats="{$T.record.seats}" class=content>
-      <td>#{$T.record.id}</td>
-      <td>{#if $T.record.game_type == 0} Texas hold 'em {#else} {$T.record.game_type} {#/if} </td>
-      <td>{$T.record.low} / {$T.record.height}</td>
-      <td>{$T.record.joined} / {$T.record.seats}</td>
-      <td>{$T.record.waiting}</td>
-    </tr>
-    {#/for}
+</table>
+<div id=games_overflow>
+<table class=games>
+  <tbody id=games_wrapper>
   </tbody>
-  </table>
+</table>
+</div>
+<table class=games>
+  <tfoot>
+    <tr>
+      <td colspan=5>
+        <div id=areas>
+          <button class='blinds selected'>5/10</button>
+          <button class=blinds>50/100</button>
+          <button class=blinds>100/500</button>
+          <button class=blinds>500/1000</button>
+        </div>
+      </td>
+    </tr>
+  </tfoot>
+</table>
+
+<textarea id=games_temp style="display:none">
+  {#foreach $T.datas as record}
+  <tr gid="{$T.record.id}" seats="{$T.record.seats}">
+    <td>#{$T.record.id}</td>
+    <td>{#if $T.record.game_type == 0} Texas hold 'em {#else} {$T.record.game_type} {#/if} </td>
+    <td>{$T.record.low} / {$T.record.height}</td>
+    <td>{$T.record.joined} / {$T.record.seats}</td>
+    <td>{$T.record.waiting}</td>
+  </tr>
+  {#/for}
 </textarea>
-<!--Tempalte End-->
