添加对默认头像的支持, 并添加了对座位用户读取头像的支持.

--- a/hall.html
+++ b/hall.html
@@ -30,6 +30,9 @@
     </tr>
   </tfoot>
 </table>
+<div id=hall_commands>
+  <button type=command id=cmd_watch >加入</button>
+</div>
 
 <textarea id=seats_temp style="display:none;">
   {#for index = 1 to $T.end}
