--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
         <article id=game style="display:none;"></article>
       </article>
     </div>
+    <div id=res_wrapper style="display: none">
+    </div>
   </body>
 </html>
