增加对读取昵称的支持,并修正读取牌桌对应用户信息的方式

--- a/hall.html
+++ b/hall.html
@@ -36,9 +36,9 @@
 
 <textarea id=seats_temp style="display:none;">
   {#for index = 1 to $T.end}
-  <div id=seat{$T.index} class=seat gid='' style='display: none;'>
-    <div class=nikc></div>
-    <img class=photo src="" />
+  <div id=seat-{$T.index} seat={$T.index} class=seat style='display: none;'>
+    <div class=nick></div>
+    <img class=photo />
     <div class=inplay></div>
   </div>
   {#/for}
