优化GAME_INFO的加载，增加自动选择功能，添加观战功能。

--- a/hall.html
+++ b/hall.html
@@ -31,7 +31,8 @@
   </tfoot>
 </table>
 <div id=hall_commands>
-  <button type=command id=cmd_watch >加入</button>
+  <button type=command id=cmd_join >加入</button><br />
+  <button type=command id=cmd_watch >观战</button>
 </div>
 
 <textarea id=seats_temp style="display:none;">
