--- a/hall.html
+++ b/hall.html
@@ -2,10 +2,10 @@
 <table class=games>
   <thead>
     <tr>
-      <th>ID</th>
-      <th>房间</th>
-      <th>大/小盲注</th>
-      <th>人数</th>
+      <th style="width: 80px;">ID</th>
+      <th style="width: 260px;">房间</th>
+      <th style="width: 120px;">大/小盲注</th>
+      <th style="width: 120px;">人数</th>
       <th>旁观</th>
     </tr>
   </thead>
@@ -47,10 +47,10 @@
 <textarea id=games_temp style="display:none;">
   {#foreach $T.datas as record}
   <tr gid="{$T.record.id}" seats="{$T.record.seats}">
-    <td>#{$T.record.id}</td>
-    <td>{#if $T.record.game_type == 0} Texas hold 'em {#else} {$T.record.game_type} {#/if} </td>
-    <td>{$T.record.low} / {$T.record.height}</td>
-    <td>{$T.record.joined} / {$T.record.seats}</td>
+    <td style="width: 80px;">#{$T.record.id}</td>
+    <td style="width: 260px;">{#if $T.record.game_type == 0} Texas hold 'em {#else} {$T.record.game_type} {#/if} </td>
+    <td style="width: 120px;">{$T.record.low} / {$T.record.height}</td>
+    <td style="width: 120px;">{$T.record.joined} / {$T.record.seats}</td>
     <td>{$T.record.waiting}</td>
   </tr>
   {#/for}
