--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img id=logo src='css/logo.png' />
         <div id=usr>
           <img id=photo />
-          <label id=nick class=msg ></label><br />
+          <label id=nick class=msg ></label>
           <label id=money class=msg ></label>
         </div>
       </nav>
