--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>创世纪 - 德州扑克</title>  
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/jquery.plugins.js" type="text/javascript"></script>  
+    <script src="js/jquery.resloader.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.ws.js" type="text/javascript"></script>  
     <script src="js/index.js" type="text/javascript"></script>  
