修正login的名字为singin

--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         </div>
       </nav>
       <article id=content>
-        <article id=login style="display:none;"></article>
+        <article id=singin style="display:none;"></article>
         <article id=hall style="display:none;"></article>
         <article id=game style="display:none;"></article>
       </article>
-    </div>
-    <div id=res_wrapper style="display: none">
     </div>
   </body>
 </html>
