添加对协议的多次注册的支持

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <label id=nick class=msg ></label>
           <label id=money class=msg ></label>
         </div>
+        <div id=pong />
       </nav>
       <article id=content>
         <article id=singin style="display:none;"></article>
