添加工具栏图标

--- a/hall.html
+++ b/hall.html
@@ -14,8 +14,8 @@
   </table>
 </div>
 <div id=hall_commands>
-  <button type=command id=cmd_join class=command >加入</button><br />
-  <button type=command id=cmd_watch class=command >观战</button>
+  <button type=command id=cmd_join class=cmdred>加入</button><br />
+  <button type=command id=cmd_watch class=cmdblue>观战</button>
 </div>
 
 <textarea id=seats_temp style="display:none;">
