--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
           <img id=photo />
           <label id=nick class=msg ></label>
           <label id=money class=msg ></label>
+          <div id=pong />
         </div>
-        <div id=pong />
+        <div id=tools>
+          <div id=settings>设置</div>
+          <div class=split></div>
+          <div id=helps>帮助</div>
+          <div class=split></div>
+          <div id=logout>登出</div>
+        </div>
       </nav>
       <article id=content>
         <article id=singin style="display:none;"></article>
