--- a/in.html
+++ b/in.html
@@ -5,14 +5,8 @@
     <title>创世纪 - 德州扑克</title>  
   </head>  
   <body>
-    <a href="index.html?usr=1000&pwd=pass">1000</a> <br />
-    <a href="index.html?usr=1001&pwd=pass">1001</a> <br />
-    <a href="index.html?usr=1002&pwd=pass">1002</a> <br />
-    <div style="width: 500px; height: 500px;">
-      <div style="position: absolute; width: 500px; height: 500px; border: 1px solid black;">
-        <div style="position: absolute; right: 10px; top: 10px; width: 100px; height: 100px; border: 1px solid red;"></div>
-      </div>
-    </div>
-    <p>Test</p>
+    <a href="index.html?usr=1000&pwd=pass&debug=true">1000</a> <br />
+    <a href="index.html?usr=1001&pwd=pass&debug=true">1001</a> <br />
+    <a href="index.html?usr=1002&pwd=pass&debug=true">1002</a> <br />
   </body>
 </html>
