添加自动加入游戏以及添加些游戏按钮

--- a/game.html
+++ b/game.html
@@ -1,2 +1,12 @@
-<button type=command id=cmd_hall >离开</button><br />
-<button type=command id=cmd_sit >落座</button><br />
+<div id=room_commands>
+  <button type=command id=cmd_hall >离开</button><br />
+  <button type=command id=cmd_sit >落座</button><br />
+  <button type=command id=cmd_sit >起身</button><br />
+</div>
+
+<div id=game_commands>
+  <button type=command id=cmd_fold>弃牌</button>
+  <button type=command id=cmd_check>看牌</button>
+  <button type=command id=cmd_call>跟注</button>
+  <button type=command id=cmd_raise>加注</button>
+</div>
