添加对游戏相关协议的支持

--- a/game.html
+++ b/game.html
@@ -1,12 +1,11 @@
-<div id=room_commands>
-  <button type=command id=cmd_hall >离开</button><br />
-  <button type=command id=cmd_sit >落座</button><br />
+<img id=table src='css/gametable.png' />
+<div id=room>
+  <button type=command id=cmd_hall >大厅</button><br />
   <button type=command id=cmd_sit >起身</button><br />
 </div>
-
-<div id=game_commands>
+<div id=cmds>
   <button type=command id=cmd_fold>弃牌</button>
   <button type=command id=cmd_check>看牌</button>
   <button type=command id=cmd_call>跟注</button>
-  <button type=command id=cmd_raise>加注</button>
+  <input type=range value=0 max=50 min=0 id=raise />
 </div>
