添加对客户端的call与raise的支持

--- a/game.html
+++ b/game.html
@@ -7,5 +7,6 @@
   <button type=command id=cmd_fold>弃牌</button>
   <button type=command id=cmd_check>看牌</button>
   <button type=command id=cmd_call>跟注</button>
-  <input type=range value=0 max=50 min=0 id=raise />
+  <button type=command id=cmd_raise>加注</button>
+  <input type=range value=0 max=50 min=0 id=raise_range></input>
 </div>
