修正各玩家显示位置, 添加根据当前玩家修正显示位置

--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
     <div class=nick></div>
     <img class=photo />
     <div class=inplay></div>
+    <img class=button src='css/button.png' style='display: none' />
   </div>
   {#/for}
 </textarea>
