--- a/game.html
+++ b/game.html
@@ -21,6 +21,8 @@
     <img class=photo />
     <div class=inplay></div>
     <img class=button src='css/button.png' style='display: none' />
+    <!--<div class=blind style='display: none;'></div>-->
+    <div class=blind></div>
   </div>
   {#/for}
 </textarea>
