添加对私有手牌的协议与动画支持

--- a/game.html
+++ b/game.html
@@ -25,4 +25,6 @@
     <div class=blind></div>
   </div>
   {#/for}
+  <img id=private_card_1 class=private_card style="top: 375px; left: 530px;"/>
+  <img id=private_card_2 class=private_card style="top: 370px; left: 550px;"/>
 </textarea>
