--- a/game.html
+++ b/game.html
@@ -20,9 +20,10 @@
     <div class=nick></div>
     <img class=photo />
     <div class=inplay></div>
-    <img class=button src='css/button.png' style='display: none' />
+    <img class=button src='css/button.png' style='display: none;' />
     <!--<div class=blind style='display: none;'></div>-->
     <div class=blind></div>
+    <img class=card src='css/poker_back.png' style='display: none;' />
   </div>
   {#/for}
   <img id=private_card_1 class=private_card style="top: 375px; left: 530px;"/>
