添加对SHARE协议的支持

--- a/game.html
+++ b/game.html
@@ -1,5 +1,10 @@
 <img id=table src='css/gametable.png' />
 <div id=game_table></div>
+<img id=share_card_1 class=card style="display:none;top:200px;left:300px;" />
+<img id=share_card_2 class=card style="display:none;top:200px;left:355px;" />
+<img id=share_card_3 class=card style="display:none;top:200px;left:410px;" />
+<img id=share_card_4 class=card style="display:none;top:200px;left:475px;" />
+<img id=share_card_5 class=card style="display:none;top:200px;left:540px;" />
 
 <div id=room_commands>
   <button type=command id=cmd_hall >大厅</button><br />
