添加showall参数以便进行显示测试

--- a/in.html
+++ b/in.html
@@ -11,5 +11,7 @@
     <hr />
     <a href="index.html?usr=1010&pwd=pass&debug=true">1010</a> <br />
     <a href="index.html?usr=1020&pwd=pass&debug=true">1020</a> <br />
+    <hr />
+    <a href="index.html?usr=1010&pwd=pass&debug=true&showall=true">1010</a> <br />
   </body>
 </html>
