添加对下注的动画到制定位置

--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
     <img class=button src='css/button.png' style='display: none;' />
     <!--<div class=blind style='display: none;'></div>-->
     <img class=card src='css/poker_back.png' style='display: none;' />
-    <div class=blind></div>
+    <div class=blind><label></label></div>
   </div>
   {#/for}
   <img id=private_card_1 class=private_card style="top: 375px; left: 530px;"/>
