添加落座的图标

--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 
 <textarea id="game_table_template" style="display:none;">
   {#for index = 1 to $T.end}
-  <div id=empty_seat_{$T.index} seat={$T.index} class=empty_seat>加入</div>
+  <div id=empty_seat_{$T.index} seat={$T.index} class=empty_seat>落座</div>
   <div id=game_seat_{$T.index} seat={$T.index} class=game_seat style='display: none'>
     <div class=nick></div>
     <img class=photo />
