添加一个简单的声音测试

--- a/in.html
+++ b/in.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" >
     <title>创世纪 - 德州扑克</title>  
+    <script src="js/jquery.js" type="text/javascript"></script>  
+    <script src="js/test.js" type="text/javascript"></script>  
   </head>
   <body>
+    <input type="button" id="audio_test" value=Audio></input><br />
     <a href="index.html?usr=1001&pwd=pass&debug=true">1001</a> <br />
     <a href="index.html?usr=1002&pwd=pass&debug=true">1002</a> <br />
     <a href="index.html?usr=1003&pwd=pass&debug=true">1003</a> <br />
