重构玩家状态的初始化与更新代码，将对PHOTO的请求移动到JOIN协议中

--- a/game.html
+++ b/game.html
@@ -27,9 +27,8 @@
     <img class=photo />
     <div class=inplay></div>
     <img class=button src='css/button.png' style='display: none;' />
-    <!--<div class=blind style='display: none;'></div>-->
     <img class=card src='css/poker_back.png' style='display: none;' />
-    <div class=betting_label></div>
+    <div class=bet_label style='display: none;'></div>
   </div>
   {#/for}
   <img id=private_card_1 class=private_card style="top: 375px; left: 530px;"/>
