--- a/game.html
+++ b/game.html
@@ -1,10 +1,10 @@
 <img id=table src='css/gametable.png' />
 <div id=game_table></div>
-<img id=share_card_1 class=card style="display:none;top:200px;left:300px;" />
-<img id=share_card_2 class=card style="display:none;top:200px;left:355px;" />
-<img id=share_card_3 class=card style="display:none;top:200px;left:410px;" />
-<img id=share_card_4 class=card style="display:none;top:200px;left:475px;" />
-<img id=share_card_5 class=card style="display:none;top:200px;left:540px;" />
+<img id=share_card_1 class='card share_card' style="display:none;top:200px;left:300px;" />
+<img id=share_card_2 class='card share_card' style="display:none;top:200px;left:355px;" />
+<img id=share_card_3 class='card share_card' style="display:none;top:200px;left:410px;" />
+<img id=share_card_4 class='card share_card' style="display:none;top:200px;left:475px;" />
+<img id=share_card_5 class='card share_card' style="display:none;top:200px;left:540px;" />
 
 <div id=room_commands>
   <button type=command id=cmd_hall >大厅</button><br />
@@ -12,8 +12,8 @@
 </div>
 
 <div id=game_commands>
-  <button type=command id=cmd_fold>弃牌</button>
-  <button type=command id=cmd_check>看牌</button>
+  <button type=command id=cmd_fold>盖牌</button>
+  <button type=command id=cmd_check>过牌</button>
   <button type=command id=cmd_call>跟注</button>
   <button type=command id=cmd_raise>加注</button>
   <input type=range value=0 max=50 min=0 id=raise_range></input>
