添加对HAND协议的高亮显示支持

--- a/game.html
+++ b/game.html
@@ -1,10 +1,10 @@
 <img id=table src='css/gametable.png' />
 <div id=game_table></div>
-<img id=share_card_1 class='card share_card' style="display:none;top:200px;left:300px;" />
-<img id=share_card_2 class='card share_card' style="display:none;top:200px;left:355px;" />
-<img id=share_card_3 class='card share_card' style="display:none;top:200px;left:410px;" />
-<img id=share_card_4 class='card share_card' style="display:none;top:200px;left:475px;" />
-<img id=share_card_5 class='card share_card' style="display:none;top:200px;left:540px;" />
+<img id=share_card_1 class='card share_card' style="top:200px;left:300px;" />
+<img id=share_card_2 class='card share_card' style="top:200px;left:355px;" />
+<img id=share_card_3 class='card share_card' style="top:200px;left:410px;" />
+<img id=share_card_4 class='card share_card' style="top:200px;left:475px;" />
+<img id=share_card_5 class='card share_card' style="top:200px;left:540px;" />
 
 <div id=room_commands>
   <button type=command id=cmd_hall >大廳</button><br />
@@ -27,11 +27,11 @@
     <img class=photo />
     <div class=inplay></div>
     <img class=button src='css/button.png' style='display: none;' />
-    <img class=card src='css/poker_back.png' style='display: none;' />
+    <img class=background_card src='css/poker_back.png' style='display: none;' />
     <div class=bet_label style='display: none;'></div>
   </div>
   {#/for}
-  <img id=private_card_1 class=private_card style="top: 375px; left: 530px;"/>
-  <img id=private_card_2 class=private_card style="top: 370px; left: 550px;"/>
+  <img id=private_card_1 class="card private_card" style="top: 375px; left: 530px;"/>
+  <img id=private_card_2 class="card private_card" style="top: 370px; left: 550px;"/>
   <div class=pot_label style="left: 671px; top: 260px; display: none;"></div>
 </textarea>
