--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/openpoker/jquery.pp.js" type="text/javascript"></script>  
     <script src="js/openpoker/jquery.ws.js" type="text/javascript"></script>  
     <script src="js/index.js" type="text/javascript"></script>  
-    <script src="js/game.js" type="text/javascript"></script>  
+    <!--<script src="js/game.js" type="text/javascript"></script>  -->
     <link rel=stylesheet type="text/css" href="css/index.css"/>
   </head>  
   <body>
