--- a/hall.html
+++ b/hall.html
@@ -3,10 +3,10 @@
   <table id=games_table>
     <thead>
       <tr>
-        <th class=col_longest>房间</th>
+        <th class=col_longest>房間</th>
         <th class=col_short>大/小盲注</th>
-        <th class=col_short>人数</th>
-        <th class=col_short>旁观</th>
+        <th class=col_short>人數</th>
+        <th class=col_short>旁觀</th>
       </tr>
     </thead>
     <tbody>
@@ -15,7 +15,7 @@
 </div>
 <div id=hall_commands>
   <button type=command id=cmd_join class=cmdred>加入</button><br />
-  <button type=command id=cmd_watch class=cmdblue>观战</button>
+  <button type=command id=cmd_watch class=cmdblue>觀戰</button>
 </div>
 
 <textarea id=seats_temp style="display:none;">
