--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" >
-    <title>创世纪 - 德州扑克</title>  
+    <title>創世紀-德州撲克</title>  
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/jquery.plugins.js" type="text/javascript"></script>  
     <script src="js/jquery.resloader.js" type="text/javascript"></script>  
@@ -24,9 +24,9 @@
           <div id=pong />
         </div>
         <div id=tools>
-          <div id=settings>设置</div>
+          <div id=settings>設置</div>
           <div class=split></div>
-          <div id=helps>帮助</div>
+          <div id=helps>幫助</div>
           <div class=split></div>
           <div id=logout>登出</div>
         </div>
