添加对JOIN游戏起始游戏的支持

--- a/game.html
+++ b/game.html
@@ -6,6 +6,11 @@
 <img id=share_card_4 class='card share_card' style="top:200px;left:475px;" />
 <img id=share_card_5 class='card share_card' style="top:200px;left:540px;" />
 
+<div id=tips>
+  <label id=wait_next  style="display: none;">請等待參與下局游戏。</label>
+  <label id=wait_player  style="display: none;">請等待其他玩家參與。</label>
+</div>
+
 <div id=room_commands>
   <button type=command id=cmd_hall >大廳</button><br />
   <button type=command id=cmd_stand >離開</button><br />
