修正游戏按钮的显示，并添加对RAISE的输入

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
   <a class='button' id=cmd_call>跟注</a>
   <a class='button' id=cmd_raise>加注</a>
   <input type=range value=0 max=50 min=0 id=raise_range></input>
-  <input type=number value=0 max=50 min=0 id=raise_number></input>
+  <input type=number value=0 max=50 min=0 step=1 id=raise_number></input>
 </div>
 
 <textarea id="game_table_template" style="display:none;">
