添加对其他玩家手牌的支持

--- a/game.html
+++ b/game.html
@@ -35,9 +35,9 @@
     <img class=dealer src='css/dealer.png' style='display: none;' />
     <img class=background_card src='css/poker_back.png' style='display: none;' />
     <div class=bet_label style='display: none;'></div>
+    <img class="card private_card" sn=1 />
+    <img class="card private_card" sn=2 />
   </div>
   {#/for}
-  <img id=private_card_1 class="card private_card" style="top: 375px; left: 530px;"/>
-  <img id=private_card_2 class="card private_card" style="top: 370px; left: 550px;"/>
   <div class=pot_label style="left: 671px; top: 260px; display: none;"></div>
 </textarea>
