调整大厅按钮的位置与外观

--- a/game.html
+++ b/game.html
@@ -12,8 +12,8 @@
 </div>
 
 <div id=room_commands>
-  <button type=command id=cmd_hall >大廳</button><br />
-  <button type=command id=cmd_stand >離開</button><br />
+  <a class='button' type=command id=cmd_hall >大廳</a><br />
+  <a class='button' type=command id=cmd_stand >離開</a><br />
 </div>
 
 <div id=game_commands>
