添加对登陆的支持

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
           <img id='photo' />
           <label class='msg' id='nick'></label>
           <label class='msg' id='money'></label>
-          <div id='pong'></div>
         </div>
         <div id='tools'>
           <div id='settings'>設置</div>
@@ -43,10 +42,10 @@
         <div id='singin'>
           <form method='post'>
             <label>帳號</label>
-            <input id='txt_usr' placeholder='請輸入您的帳號' />
+            <input id='txt_identity' placeholder='請輸入您的帳號' />
             <br />
             <label>密碼</label>
-            <input id='txt_pwd' placeholder='請輸入您的密碼' type='password' />
+            <input id='txt_password' placeholder='請輸入您的密碼' type='password' />
             <br />
             <div>
               <input checked='checked' id='ckb_save' type='checkbox'>存儲帳號信息</input>
