--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src='js/jquery.resloader.js' type='text/javascript'></script>
     <script src='js/openpoker/jquery.pp.js' type='text/javascript'></script>
     <script src='js/openpoker/jquery.ws.js' type='text/javascript'></script>
-    <script src='js/jquery.player.js' type='text/javascript'></script>
+    <script src='js/player.js' type='text/javascript'></script>
     <script src='js/index.js' type='text/javascript'></script>
     <script src='js/hall.js' type='text/javascript'></script>
     <link href='css/index.css' rel='stylesheet' type='text/css'>
